--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -5,17 +5,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TEST"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "file =(\"raw_data/accident de velo/accidents-Velo.csv\")\n",
-    "df = pd.rad"
-   ]
+   "source": []
   }
  ],
  "metadata": {
