Adds beginning of data cleaning

--- a/notebooks/notebook_axel.ipynb
+++ b/notebooks/notebook_axel.ipynb
@@ -15,8 +15,13 @@
    "source": [
     "import pandas as pd\n",
     "import plotly.express as px\n",
+    "import os\n",
+    "\n",
+    "## data gouv API call\n",
     "import requests\n",
-    "import os\n"
+    "\n",
+    "# formating files (filenames, encodings, separators)\n",
+    "import yaml\n"
    ]
   },
   {
@@ -251,6 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "for url_dict in all_urls:\n",
     "    for path, url in url_dict.items():\n",
     "        path = '../raw_data/' + path\n",
@@ -352,6 +358,11 @@
     "folder = \"../raw_data/\"\n",
     "os.listdir(folder)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
