Adds modif to exploration

--- a/notebooks/notebook_axel.ipynb
+++ b/notebooks/notebook_axel.ipynb
@@ -415,6 +415,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catv = {\n",
+    "    1: [1, 80, 50, 60], # Bicyclettes, VAE et EDP (à moteur et sans moteur) - utilisent les meme voies + comportement similaire\n",
+    "    2: [3, 7], # Voitures (y compris les voiturettes et les VL seuls)\n",
+    "    3: [2, 30, 31, 32, 33, 34, 41, 42, 43], # Cyclomoteurs, scooters et motocyclettes\n",
+    "    4: [10, 13, 14, 15, 16, 17, 37, 38], # Véhicules Utilitaires, Poids Lourds, et Autobus/Autocar\n",
+    "    5: [20, 21, 39, 40, 99] # Autres véhicules (Engins spéciaux, Tracteur agricole, Train, Tramway, et autres)\n",
+    "}\n",
+    "\n",
+    "obs_group = {\n",
+    "    0: [-1, 0], # sans obstacle\n",
+    "    1: list(range(1, 18)) # avec\n",
+    "}\n",
+    "\n",
+    "# Regroupement pour obsm\n",
+    "obsm_group = {\n",
+    "    0: [1, 2, 4], #Piéton/Véhicule/Véhiculesurrail\n",
+    "    1: [5, 6], # animaux\n",
+    "    2: [-1, 0, 9] #autres/n.c\n",
+    "}\n",
+    "\n",
+    "# reverse dictionnary for easier mapping\n",
+    "catv_inverted = {v: k for k, values in catv.items() for v in values}\n",
+    "obs_group_inverted = {v: k for k, values in obs_group.items() for v in values}\n",
+    "obsm_group_inverted = {v: k for k, values in obsm_group.items() for v in values}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 0.0     154756\n",
+       " 1.0       4056\n",
+       " 12.0       817\n",
+       " 14.0       679\n",
+       " 16.0       324\n",
+       " 8.0        316\n",
+       " 13.0       270\n",
+       " 6.0        258\n",
+       " 15.0       243\n",
+       " 9.0        183\n",
+       " 2.0        152\n",
+       " 3.0         92\n",
+       " 11.0        86\n",
+       " 4.0         60\n",
+       " 7.0         50\n",
+       " 5.0         42\n",
+       " 10.0        42\n",
+       "-1.0         14\n",
+       " 17.0         2\n",
+       "Name: obs, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikes_df.obs.value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 2.0    119769\n",
+       " 0.0     22860\n",
+       " 9.0     13185\n",
+       " 1.0      5631\n",
+       " 6.0       571\n",
+       " 4.0       267\n",
+       " 5.0       163\n",
+       "-1.0        24\n",
+       "Name: obsm, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikes_df.obsm.value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_30847/3491357989.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  bikes_df.catv = catv_col\n"
+     ]
+    }
+   ],
+   "source": [
+    "bikes_df.catv = catv_col\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -576,7 +697,14 @@
    ],
    "source": [
     "accident_2p = bikes_df[bikes_df.Num_Acc.isin(accident_2p_idx)]\n",
-    "accident_2p\n"
+    "accident_2p\n",
+    "\n",
+    "catv = {\n",
+    "\n",
+    "    \"1\": [1], # bikes\n",
+    "    \"2\": [3, 7,] # cars\n",
+    "    \"3\": [2, 4, 5, 6] # scooters\n",
+    "}\n"
    ]
   },
   {
