--- a/notebooks/notebook_axel.ipynb
+++ b/notebooks/notebook_axel.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -401,12 +401,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# drop useless columns\n",
-    "vehi_df_modif = vehi_df.drop([\"motor\", \"num_veh\", \"occutc\", \"senc\"], axis=1)\n",
+    "vehi_df_modif = vehi_df.drop([\"id_vehicule\", \"motor\", \"occutc\", \"senc\"], axis=1)\n",
     "\n",
     "### REMOVING ACCIDENTS DUPLICATES ###\n",
     "# get bike id's\n",
@@ -429,17 +429,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1030"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(vehi_df.catv == 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "catv_group_named = {\n",
     "    \"Bicycles_ElectricScooters\": [1, 80, 50, 60],  # Bicycles, E-bikes, and Personal Mobility Devices\n",
-    "    \"Cars\": [3, 7],  # Cars including light vehicles\n",
-    "    \"Motorcycles_Scooters\": [2, 30, 31, 32, 33, 34, 41, 42, 43],  # Motorcycles and scooters\n",
-    "    \"HeavyVehicles_Buses\": [10, 13, 14, 15, 16, 17, 37, 38],  # Utility vehicles, heavy trucks, and buses\n",
-    "    \"Others_SpecialVehicles\": [20, 21, 39, 40, 99]  # Special vehicles and others\n",
+    "    \"Cars\": [3, 7, 8, 9],  # Cars including light vehicles, VL + caravane, VL + remorque\n",
+    "    \"Motorcycles_Scooters\": [2, 30, 31, 32, 33, 34, 41, 42, 43, 4, 5, 6],  # Motorcycles, scooters, scooter immatriculé, motocyclette, side-car\n",
+    "    \"HeavyVehicles_Buses\": [10, 13, 14, 15, 16, 17, 37, 38, 18, 19],  # Utility vehicles, heavy trucks, buses, transport en commun, tramway\n",
+    "    \"Others_SpecialVehicles\": [0, 20, 21, 39, 40, 99, 11, 12, 35, 36]  # Special vehicles and others, VU + caravane, VU + remorque\n",
     "}\n",
+    "\n",
     "\n",
     "obs_group_named = {\n",
     "    \"NoObstacle\": [-1, 0],  # Without obstacle\n",
