--- a/notebooks/notebook_chams_merge.ipynb
+++ b/notebooks/notebook_chams_merge.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import sklearn\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.pipeline import make_pipeline"
    ]
   },
   {
@@ -792,6 +796,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "velo_df.drop(columns=['catv'], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -851,12 +864,510 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0         52\n",
+      "1        586\n",
+      "2        400\n",
+      "3         42\n",
+      "4        252\n",
+      "        ... \n",
+      "83228    611\n",
+      "83229    611\n",
+      "83230    611\n",
+      "83231    611\n",
+      "83232    611\n",
+      "Name: com, Length: 83233, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(velo_df['com'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "velo_df.to_csv('../clean_data/velo_df.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# preprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder, FunctionTransformer, Col\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "import datetime as dt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_features(X: pd.DataFrame) -> np.ndarray:\n",
+    "\n",
+    "    def create_sklearn_preprocessor() -> ColumnTransformer:\n",
+    "\n",
+    "        ohe_categories = ['obs','obsm','choc','manv','trajet','locp','atp','etatp','catr','circ','vosp','prof','plan','surf','infra','situ','lum','int','col']\n",
+    "\n",
+    "        # Création du pipeline ohe\n",
+    "\n",
+    "        ohe_pipe = make_pipeline(\n",
+    "            ColumnTransformer(\n",
+    "                transformers=[\n",
+    "                    ('ohe', OneHotEncoder(categories='auto', sparse_output=False, handle_unknown='ignore'), ohe_categories)\n",
+    "                ],\n",
+    "                remainder='passthrough'\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        # Création du pipeline grav\n",
+    "        grav_pipe = make_pipeline(\n",
+    "            ColumnTransformer(\n",
+    "                transformers=[\n",
+    "                    ('grav', FunctionTransformer(lambda x: x.map({1: 'Indemne', 2: 'Blessé léger',\n",
+    "                                                                3: 'Blessé hospitalisé', 4: 'Tué'}),\n",
+    "                                                validate=False), ['grav'])\n",
+    "                ],\n",
+    "                remainder='passthrough'\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "\n",
+    "        def calculate_age(df):\n",
+    "            # Extrait les 4 premiers chiffres de 'Num_Acc' comme année de l'accident\n",
+    "            df['annee_accident'] = df['Num_Acc'].astype(str).str[:4]\n",
+    "\n",
+    "            # Convertit 'annee_accident' en type entier\n",
+    "            df['annee_accident'] = df['annee_accident'].astype(int)\n",
+    "\n",
+    "            # Calcul de l'âge à la date de l'accident\n",
+    "            df['age_at_accident'] = df['annee_accident'] - df['an_nais']\n",
+    "\n",
+    "            # Supprime les colonnes intermédiaires si nécessaire\n",
+    "            df = df.drop(['annee_accident'], axis=1)\n",
+    "\n",
+    "            return df\n",
+    "\n",
+    "        # Création du pipeline\n",
+    "        age_pipe = make_pipeline(\n",
+    "            ColumnTransformer(\n",
+    "                transformers=[\n",
+    "                    ('age', FunctionTransformer(calculate_age, validate=False), ['Num_Acc', 'an_nais'])\n",
+    "                ],\n",
+    "                remainder='passthrough'\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "        final_pipeline = make_pipeline(\n",
+    "            ohe_pipe,\n",
+    "            grav_pipe,\n",
+    "            age_pipe,\n",
+    "            remainder='passthrough',\n",
+    "        # Garde les colonnes non utilisées\n",
+    "        )\n",
+    "\n",
+    "        return final_pipeline\n",
+    "\n",
+    "    preprocessor = create_sklearn_preprocessor()\n",
+    "    X_processed = preprocessor.fit_transform(X)\n",
+    "\n",
+    "    print(\"✅ X_processed, with shape\", X_processed.shape)\n",
+    "\n",
+    "    return X_processed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Num_Acc</th>\n",
+       "      <th>catv</th>\n",
+       "      <th>obs</th>\n",
+       "      <th>obsm</th>\n",
+       "      <th>choc</th>\n",
+       "      <th>manv</th>\n",
+       "      <th>aug</th>\n",
+       "      <th>grav</th>\n",
+       "      <th>sexe</th>\n",
+       "      <th>trajet</th>\n",
+       "      <th>...</th>\n",
+       "      <th>int</th>\n",
+       "      <th>atm</th>\n",
+       "      <th>col</th>\n",
+       "      <th>com</th>\n",
+       "      <th>adr</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>dep</th>\n",
+       "      <th>date</th>\n",
+       "      <th>age_at_accident</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>201800000004</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>201800000004B01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>30 rue Jules Guesde</td>\n",
+       "      <td>5051974.0</td>\n",
+       "      <td>289123.0</td>\n",
+       "      <td>590</td>\n",
+       "      <td>2018-05-05 17:35:00</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>201800000020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>201800000020B01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>586</td>\n",
+       "      <td>rue de wachemy</td>\n",
+       "      <td>5054129.0</td>\n",
+       "      <td>318902.0</td>\n",
+       "      <td>590</td>\n",
+       "      <td>2018-05-27 16:00:00</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>201800000044</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>201800000044A01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>400</td>\n",
+       "      <td>rue de maroeuil</td>\n",
+       "      <td>5062556.0</td>\n",
+       "      <td>262903.0</td>\n",
+       "      <td>590</td>\n",
+       "      <td>2018-09-29 18:00:00</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>201800000051</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>201800000051B01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Rte départementale</td>\n",
+       "      <td>5053908.0</td>\n",
+       "      <td>326460.0</td>\n",
+       "      <td>590</td>\n",
+       "      <td>2018-08-26 15:30:00</td>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>201800000056</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>201800000056B01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>252</td>\n",
+       "      <td>105 rue de quesnoy sur d</td>\n",
+       "      <td>5068934.0</td>\n",
+       "      <td>296942.0</td>\n",
+       "      <td>590</td>\n",
+       "      <td>2018-04-10 15:20:00</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83228</th>\n",
+       "      <td>201500058611</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>201500058611B01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>611</td>\n",
+       "      <td>mamoudzou centre-Préfect</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>976</td>\n",
+       "      <td>2015-11-05 16:50:00</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83229</th>\n",
+       "      <td>201500058616</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>201500058616B01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>611</td>\n",
+       "      <td>doujani-Mosquée doujani</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>976</td>\n",
+       "      <td>2015-09-28 16:50:00</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83230</th>\n",
+       "      <td>201500058626</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>201500058626A01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>611</td>\n",
+       "      <td>m'tsapere-Dahilou (rue)</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>976</td>\n",
+       "      <td>2015-10-07 14:53:00</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83231</th>\n",
+       "      <td>201500058629</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>201500058629A01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>611</td>\n",
+       "      <td>mamoudzou centre-Préfect</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>976</td>\n",
+       "      <td>2015-10-13 11:35:00</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83232</th>\n",
+       "      <td>201500058648</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>201500058648B01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>611</td>\n",
+       "      <td>m'tsapere-Nationale 2 (r</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>976</td>\n",
+       "      <td>2015-11-04 19:50:00</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>83233 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Num_Acc  catv   obs  obsm  choc  manv              aug  grav  \\\n",
+       "0      201800000004     1   0.0   2.0   8.0   1.0  201800000004B01     3   \n",
+       "1      201800000020     1  12.0   0.0   7.0   1.0  201800000020B01     3   \n",
+       "2      201800000044     1   0.0   0.0   8.0   2.0  201800000044A01     3   \n",
+       "3      201800000051     1   0.0   0.0   4.0   2.0  201800000051B01     2   \n",
+       "4      201800000056     1   0.0   2.0   6.0   2.0  201800000056B01     3   \n",
+       "...             ...   ...   ...   ...   ...   ...              ...   ...   \n",
+       "83228  201500058611     1  14.0   2.0   1.0  17.0  201500058611B01     4   \n",
+       "83229  201500058616     1   0.0   2.0   1.0   1.0  201500058616B01     3   \n",
+       "83230  201500058626     1   0.0   1.0   1.0   2.0  201500058626A01     1   \n",
+       "83231  201500058629     1   1.0   0.0   1.0  15.0  201500058629A01     4   \n",
+       "83232  201500058648     1   0.0   2.0   8.0  15.0  201500058648B01     4   \n",
+       "\n",
+       "       sexe  trajet  ...  int  atm  col  com                       adr  \\\n",
+       "0         1       5  ...  1.0  7.0  3.0   52       30 rue Jules Guesde   \n",
+       "1         1       9  ...  1.0  1.0  7.0  586            rue de wachemy   \n",
+       "2         1       5  ...  1.0  7.0  3.0  400           rue de maroeuil   \n",
+       "3         1       5  ...  1.0  2.0  2.0   42        Rte départementale   \n",
+       "4         1       5  ...  1.0  1.0  2.0  252  105 rue de quesnoy sur d   \n",
+       "...     ...     ...  ...  ...  ...  ...  ...                       ...   \n",
+       "83228     1       5  ...  1.0  1.0  3.0  611  mamoudzou centre-Préfect   \n",
+       "83229     1       1  ...  6.0  1.0  3.0  611   doujani-Mosquée doujani   \n",
+       "83230     1       9  ...  1.0  1.0  6.0  611   m'tsapere-Dahilou (rue)   \n",
+       "83231     1       5  ...  4.0  1.0  3.0  611  mamoudzou centre-Préfect   \n",
+       "83232     1       5  ...  6.0  1.0  6.0  611  m'tsapere-Nationale 2 (r   \n",
+       "\n",
+       "             lat      long  dep                 date  age_at_accident  \n",
+       "0      5051974.0  289123.0  590  2018-05-05 17:35:00              5.0  \n",
+       "1      5054129.0  318902.0  590  2018-05-27 16:00:00             21.0  \n",
+       "2      5062556.0  262903.0  590  2018-09-29 18:00:00             71.0  \n",
+       "3      5053908.0  326460.0  590  2018-08-26 15:30:00             78.0  \n",
+       "4      5068934.0  296942.0  590  2018-04-10 15:20:00             74.0  \n",
+       "...          ...       ...  ...                  ...              ...  \n",
+       "83228        0.0       0.0  976  2015-11-05 16:50:00             55.0  \n",
+       "83229        0.0       0.0  976  2015-09-28 16:50:00             51.0  \n",
+       "83230        0.0       0.0  976  2015-10-07 14:53:00             13.0  \n",
+       "83231        0.0       0.0  976  2015-10-13 11:35:00             13.0  \n",
+       "83232        0.0       0.0  976  2015-11-04 19:50:00             14.0  \n",
+       "\n",
+       "[83233 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
