--- a/notebooks/notebook_chams_accident.ipynb
+++ b/notebooks/notebook_chams_accident.ipynb
@@ -2334,6 +2334,244 @@
     "usager_df_clean.to_csv('../clean_data/usager_clean.csv', index=False)\n",
     "# on charge le fichier nettoyé"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning vehicule dataset "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/jw/qw353j7x7h970k1t74h_j5nc0000gn/T/ipykernel_21617/3052478516.py:1: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  vehi_df = pd.read_csv('../raw_data/vehi.csv')\n"
+     ]
+    }
+   ],
+   "source": [
+    "vehi_df = pd.read_csv('../raw_data/vehi.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Drop columns occutc, num_veh, motor, id_vehicule, senc\"\"\"\n",
+    "\n",
+    "vehi_df_modif = vehi_df.drop(['occutc','motor', 'id_vehicule','senc'], axis=1, inplace=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Clean the column 'obs'\"\"\"\n",
+    "\n",
+    "values_destribution_obs = vehi_df_modif.obs[vehi_df_modif.obs >= 0].value_counts(normalize=True)\n",
+    "new_values_obs = np.random.choice(values_destribution_obs.index, size = vehi_df_modif['obs'].isna().sum(), p=values_destribution_obs.values)\n",
+    "vehi_df_modif.loc[vehi_df_modif['obs'].isna(), 'obs'] = new_values_obs\n",
+    "new_values_obs2 = np.random.choice(values_destribution_obs.index, size = (vehi_df_modif['obs'] == -1).sum(), p=values_destribution_obs.values)\n",
+    "vehi_df_modif.loc[vehi_df_modif['obs'] == -1, 'obs'] = new_values_obs2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Cleaning the column 'obsm'\"\"\"\n",
+    "\n",
+    "values_destribution_obsm = vehi_df_modif.obsm[vehi_df_modif.obsm >= 0].value_counts(normalize=True)\n",
+    "new_values_obsm = np.random.choice(values_destribution_obsm.index, size = vehi_df_modif['obsm'].isna().sum(), p=values_destribution_obsm.values)\n",
+    "vehi_df_modif.loc[vehi_df_modif['obsm'].isna(), 'obsm'] = new_values_obsm\n",
+    "new_values_obsm2 = np.random.choice(values_destribution_obsm.index, size = (vehi_df_modif['obsm'] == -1).sum(), p=values_destribution_obsm.values)\n",
+    "vehi_df_modif.loc[vehi_df_modif['obsm'] == -1, 'obsm'] = new_values_obsm2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Clean the column 'choc'\"\"\"\n",
+    "\n",
+    "values_destribution_choc = vehi_df_modif.choc[vehi_df_modif.choc > 0].value_counts(normalize=True)\n",
+    "new_values_choc = np.random.choice(values_destribution_choc.index, size = vehi_df_modif['choc'].isna().sum(), p=values_destribution_choc.values)\n",
+    "vehi_df_modif.loc[vehi_df_modif['choc'].isna(), 'choc'] = new_values_choc\n",
+    "new_values_choc2 = np.random.choice(values_destribution_choc.index, size = (vehi_df_modif['choc'] == -1).sum(), p=values_destribution_choc.values)\n",
+    "vehi_df_modif.loc[vehi_df_modif['choc'] == -1, 'choc'] = new_values_choc2\n",
+    "new_values_choc3 = np.random.choice(values_destribution_choc.index, size = (vehi_df_modif['choc'] == 0).sum(), p=values_destribution_choc.values)\n",
+    "vehi_df_modif.loc[vehi_df_modif['choc'] == 0, 'choc'] = new_values_choc3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Clean the column 'manv'\"\"\"\"\"\n",
+    "\n",
+    "values_destribution_manv = vehi_df_modif.manv[vehi_df_modif.choc > 0].value_counts(normalize=True)\n",
+    "new_values_manv = np.random.choice(values_destribution_manv.index, size = vehi_df_modif['manv'].isna().sum(), p=values_destribution_manv.values)\n",
+    "vehi_df_modif.loc[vehi_df_modif['manv'].isna(), 'manv'] = new_values_manv\n",
+    "new_values_manv2 = np.random.choice(values_destribution_manv.index, size = (vehi_df_modif['manv'] == -1).sum(), p=values_destribution_manv.values)\n",
+    "vehi_df_modif.loc[vehi_df_modif['manv'] == -1, 'manv'] = new_values_manv2\n",
+    "new_values_manv3 = np.random.choice(values_destribution_manv.index, size = (vehi_df_modif['manv'] == 0).sum(), p=values_destribution_manv.values)\n",
+    "vehi_df_modif.loc[vehi_df_modif['manv'] == 0, 'manv'] = new_values_manv3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vehi_df_modif.to_csv('../clean_data/vehicules_clean.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Num_Acc</th>\n",
+       "      <th>catv</th>\n",
+       "      <th>obs</th>\n",
+       "      <th>obsm</th>\n",
+       "      <th>choc</th>\n",
+       "      <th>manv</th>\n",
+       "      <th>num_veh</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>201800000001</td>\n",
+       "      <td>Cars</td>\n",
+       "      <td>NoObstacle</td>\n",
+       "      <td>Pedestrian_Vehicle_Rail</td>\n",
+       "      <td>Impact</td>\n",
+       "      <td>BasicManeuvers</td>\n",
+       "      <td>B01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>201800000001</td>\n",
+       "      <td>Cars</td>\n",
+       "      <td>NoObstacle</td>\n",
+       "      <td>Pedestrian_Vehicle_Rail</td>\n",
+       "      <td>Impact</td>\n",
+       "      <td>DirectionalChanges</td>\n",
+       "      <td>A01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>201800000002</td>\n",
+       "      <td>Cars</td>\n",
+       "      <td>NoObstacle</td>\n",
+       "      <td>Pedestrian_Vehicle_Rail</td>\n",
+       "      <td>NoImpact</td>\n",
+       "      <td>BasicManeuvers</td>\n",
+       "      <td>A01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>201800000003</td>\n",
+       "      <td>Motorcycles_Scooters</td>\n",
+       "      <td>WithObstacle</td>\n",
+       "      <td>Pedestrian_Vehicle_Rail</td>\n",
+       "      <td>Impact</td>\n",
+       "      <td>BasicManeuvers</td>\n",
+       "      <td>A01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>201800000003</td>\n",
+       "      <td>Cars</td>\n",
+       "      <td>NoObstacle</td>\n",
+       "      <td>Pedestrian_Vehicle_Rail</td>\n",
+       "      <td>Impact</td>\n",
+       "      <td>DirectionalChanges</td>\n",
+       "      <td>B01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Num_Acc                  catv           obs                     obsm  \\\n",
+       "0  201800000001                  Cars    NoObstacle  Pedestrian_Vehicle_Rail   \n",
+       "1  201800000001                  Cars    NoObstacle  Pedestrian_Vehicle_Rail   \n",
+       "2  201800000002                  Cars    NoObstacle  Pedestrian_Vehicle_Rail   \n",
+       "3  201800000003  Motorcycles_Scooters  WithObstacle  Pedestrian_Vehicle_Rail   \n",
+       "4  201800000003                  Cars    NoObstacle  Pedestrian_Vehicle_Rail   \n",
+       "\n",
+       "       choc                manv num_veh  \n",
+       "0    Impact      BasicManeuvers     B01  \n",
+       "1    Impact  DirectionalChanges     A01  \n",
+       "2  NoImpact      BasicManeuvers     A01  \n",
+       "3    Impact      BasicManeuvers     A01  \n",
+       "4    Impact  DirectionalChanges     B01  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vehi_df_modif.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
