adds changes to streamlit_app.py

--- a/notebooks/vp_explo_prophet.ipynb
+++ b/notebooks/vp_explo_prophet.ipynb
@@ -96143,7 +96143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_n_accidents(d: str, model=m) -> float:\n",
+    "def predict_n_accidents(d: str, model=model) -> float:\n",
     "    \"\"\"\n",
     "    Takes a date and returns the expected number of accident for this given day.\n",
     "    \"\"\"\n",
