fixes risk_index bug with zeros

--- a/notebooks/vp_risk_index.ipynb
+++ b/notebooks/vp_risk_index.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,22 +33,22 @@
     "    a = sin(dlat/2)**2 + cos(lat1) * cos(lat2) * sin(dlon/2)**2\n",
     "    c = 2 * asin(sqrt(a)) \n",
     "    # Radius of earth in kilometers is 6371\n",
-    "    km = 6371* c\n",
+    "    km = 6_371_000 * c\n",
     "    return km"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.098099467429279"
+       "4098.099467429279"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def returns_index_if_not_zero(seq: list):\n",
+    "    for i, el in enumerate(seq):\n",
+    "        if el != 0: return i\n",
+    "    return i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,21 +92,32 @@
     "\n",
     "    - n: number of closest points which will be used to compute the mean.\n",
     "    \"\"\"\n",
-    "    return mean(sorted([dist((point[0], point[1]), (coord[0], coord[1])) for coord in coords])[:n])"
+    "\n",
+    "    all_distances = [dist((point[0], point[1]), (coord[0], coord[1])) for coord in coords]\n",
+    "    all_distances_sorted = sorted(all_distances)\n",
+    "    all_distances_n = all_distances_sorted[:n]\n",
+    "    res = mean(all_distances_n)\n",
+    "\n",
+    "    if res == 0:\n",
+    "        n = all_distances_sorted.count(0)\n",
+    "        return mean(all_distances_sorted[:n + 1])\n",
+    "\n",
+    "    return res\n",
+    "    #return mean(sorted([dist((point[0], point[1]), (coord[0], coord[1])) for coord in coords])[:n])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "199.8045055652134"
+       "199804.5055652134"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,21 +127,21 @@
     "\n",
     "lat1, lon1 = 48.8619573, 2.3311767\n",
     "coords = [(48.847950, 2.382987), (49.847950, 3.382987), (50.847950, 4.382987), (51.847950, 5.382987)]\n",
-    "compute_mean_dist_of_n_closest_points((lat1, lon1), coords, 4)"
+    "risk_index((lat1, lon1), coords, 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.12451208183704875"
+       "124.51208183704875"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,8 +155,113 @@
     "coords = [(el[0], el[1]) for el in zip(df['lat'].to_list(), df['long'].to_list())]\n",
     "\n",
     "lat1, lon1 = 48.8619573, 2.3311767\n",
-    "compute_mean_dist_of_n_closest_points((lat1, lon1), coords, 3)"
+    "risk_index((lat1, lon1), coords, 3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5917294577075928"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean([0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 15.384965900397413])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5917294577075928"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "risk_index((48.862527, 2.335861), coords, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "642 ns ± 18.1 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "returns_index_if_not_zero(zero_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zero_list.count(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
